# bevy_paths

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
bevy_paths/: Cargo.toml  README.md
bevy_paths/examples/: basic_usage.rs
bevy_paths/src/: error.rs  lib.rs  paths.rs  tests.rs
bevy_paths_derive/: Cargo.toml
bevy_paths_derive/src/: lib.rs
bevy_paths_validation/: Cargo.toml
bevy_paths_validation/src/: lib.rs
examples/: basic_usage.rs
src/: error.rs  lib.rs  tests.rs
