[package]
name = "bevy_paths"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true , features= ["bevy_log"]}
bevy_paths_derive = { path = "../bevy_paths_derive" }
thiserror = { version = "2.0.14", features = ["std"] }
dirs = "4.0"
unicode-normalization = "0.1"

# For examples only
[dev-dependencies]
bevy = { workspace = true, features = ["bevy_render", "bevy_core_pipeline"] }
