[package]
name = "bevy_paths_derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for bevy_paths"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
bevy_paths_validation = { path = "../bevy_paths_validation" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.0"
thiserror = "1.0"

[dev-dependencies]
bevy_paths = { path = "../bevy_paths" }
bevy_reflect = "0.18"
